syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.navercorp.pinpoint.grpc.trace";
option java_outer_classname = "SpanProto";
//option objc_class_prefix = "PIN";

package v1;

message PSpan {
    int32 version = 1;

    PTransactionId transactionId = 2;

    fixed64 spanId = 3;
    fixed64 parentSpanId = 4;

    // span event's startTimestamp
    int64 startTime = 5;
    int32 elapsed = 6;
    int32 apiId = 7;

    int32 serviceType = 8;

    PAcceptEvent acceptEvent = 9;

    repeated PAnnotation annotation = 10;

    int32 flag = 11;
    sint32 err = 12;

    repeated PSpanEvent spanEvent = 13;

    PIntStringValue exceptionInfo = 14;

    int32 applicationServiceType = 15;
    int32 loggingTransactionInfo = 16;
}

message PTransactionId {
    // identical to agentId if null
    string agentId = 1; //nullable
    int64 agentStartTime = 2;
    int64 sequence = 3;
}

message PAcceptEvent {
    string rpc = 1;
    string endPoint = 2;
    string remoteAddr = 3;
    PParentInfo parentInfo = 4;
}

message PParentInfo {
    string parentApplicationName = 1;
    int32 parentApplicationType = 2;
    string acceptorHost = 3;
}

message PLocalAsyncId {
    int32 asyncId = 1;
    int32 sequence = 2;
}


message PSpanEvent {
    int32 sequence = 1;
    int32 depth = 2;

    int32 startElapsed = 3;
    int32 endElapsed = 4;

    sint32 serviceType = 5;

    repeated PAnnotation annotation = 6;

    sint32 apiId = 10;
    PIntStringValue exceptionInfo = 11;

    PNextEvent nextEvent = 12;
    int32 asyncEvent = 13;
}

message PNextEvent {
    oneof field {
        PMessageEvent messageEvent = 1;
    }
}

message PMessageEvent {
    fixed64 nextSpanId = 1;
    string endPoint = 2;
    string destinationId = 3;
}

message PSpanChunk {
    int32 version = 1;

    PTransactionId transactionId = 2;

    fixed64 spanId = 3;

    string endPoint = 4;

    repeated PSpanEvent spanEvent = 5;

    int32 applicationServiceType = 6;

    int64 keyTime = 7;

    PLocalAsyncId localAsyncId = 8;

}

// 1.6.x- : version = 0;
// 1.7.x+ : version = 1;
//const i8 TRACE_V1 = 0;
//const i8 TRACE_V2 = 1;
//
message PIntStringValue {
    int32 intValue = 1;
    string stringValue = 2;
}

message PIntStringStringValue {
    int32 intValue = 1;
    string stringValue1 = 2;
    string stringValue2 = 3;
}

message PLongIntIntByteByteStringValue {
    int64 longValue = 1;
    int32 intValue1 = 2;
    int32 intValue2 = 3;
    sint32 byteValue1 = 4;
    sint32 byteValue2 = 5;
    string stringValue = 6;
}

message PIntBooleanIntBooleanValue {
    int32 intValue1 = 1;
    bool boolValue1 = 2;
    int32 intValue2 = 3;
    bool boolValue2 = 4;
}

message PStringStringValue {
    string stringValue1 = 1;
    string stringValue2 = 2;
}

message PAnnotationValue {
    oneof field {
        string stringValue = 1;
        bool boolValue = 2;
        int32 intValue = 3;
        int64 longValue = 4;
        // for compatibility
        sint32 shortValue = 5;
        double doubleValue = 6;
        bytes binaryValue = 7;
        // for compatibility
        sint32 byteValue = 8;
        PIntStringValue intStringValue = 9;
        PStringStringValue stringStringValue = 10;
        PIntStringStringValue intStringStringValue = 11;
        PLongIntIntByteByteStringValue longIntIntByteByteStringValue = 12;
        PIntBooleanIntBooleanValue intBooleanIntBooleanValue = 13;
    }
}

message PAnnotation {
    int32 key = 1;
    PAnnotationValue value = 2;
}

message PResult {
    bool success = 1;
    string message = 2;
}

message PSqlMetaData {
    int32 sqlId = 1;
    string sql = 2;
}

message PApiMetaData {
    int32 apiId = 1;
    string apiInfo = 2;
    int32 line = 3;
    int32 type = 4;
}

message PStringMetaData {
    int32 stringId = 1;
    string stringValue = 2;
}